@@ -2,12 +2,12 @@ package kg.attractor.jobsearch.service.impl;
 
 
 import jakarta.mail.MessagingException;
+import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
-import jakarta.servlet.http.HttpSession;
 import kg.attractor.jobsearch.dto.UserDto;
 import kg.attractor.jobsearch.dto.UserEditDto;
 import kg.attractor.jobsearch.exceptions.EmailAlreadyExistsException;
+import kg.attractor.jobsearch.exceptions.RoleNotFoundException;
 import kg.attractor.jobsearch.exceptions.UserNotFoundException;
 import kg.attractor.jobsearch.model.Role;
 import kg.attractor.jobsearch.model.User;
@@ -18,21 +18,15 @@ import kg.attractor.jobsearch.util.CommonUtilities;
 import kg.attractor.jobsearch.util.FileUtil;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.security.web.authentication.WebAuthenticationDetails;
-import org.springframework.security.web.csrf.CsrfToken;
-import org.springframework.security.web.csrf.DefaultCsrfToken;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.io.UnsupportedEncodingException;
-import java.util.List;
-import java.util.UUID;
+import java.util.*;
 
 @Slf4j
 @Service
@@ -43,58 +37,27 @@ public class UserServiceImpl implements UserService {
     private final FileUtil fileUtil;
     private final RoleService roleService;
     private final EmailService emailService;
-//    private final AuthenticationManager authenticationManager;
-
-//    @Override
-//    public void autoLogin(String userEmail, String decodedPassword, HttpServletRequest request, HttpServletResponse response) {
-//        User user = findModelUserByEmail(userEmail);
-//        try {
-//            // Создаем UserDetails
-//            UserDetails userDetails = org.springframework.security.core.userdetails.User
-//                    .withUsername(user.getEmail())
-//                    .password("") // пароль не нужен для уже аутентифицированного пользователя
-//                    .authorities(user.getAuthorities())
-//                    .build();
-//
-//            // Создаем authentication token
-//            UsernamePasswordAuthenticationToken authToken =
-//                    new UsernamePasswordAuthenticationToken(
-//                            userDetails,
-//                            null,
-//                            userDetails.getAuthorities()
-//                    );
-//
-//            // Устанавливаем details
-//            authToken.setDetails(new WebAuthenticationDetails(request));
-//
-//            // Устанавливаем authentication в SecurityContext
-//            SecurityContext context = SecurityContextHolder.createEmptyContext();
-//            context.setAuthentication(authToken);
-//            SecurityContextHolder.setContext(context);
-//
-//            // СОЗДАЕМ СЕССИЮ И CSRF ТОКЕН
-//            HttpSession session = request.getSession(true);
-//            session.setAttribute("SPRING_SECURITY_CONTEXT", context);
-//
-//            // Генерируем CSRF токен
-//            CsrfToken csrfToken = new DefaultCsrfToken("X-CSRF-TOKEN", "_csrf",
-//                    UUID.randomUUID().toString());
-//            session.setAttribute("csrfToken", csrfToken);
-//
-//        } catch (Exception e) {
-//            SecurityContextHolder.clearContext();
-//            throw new RuntimeException("Auto login failed: " + e.getMessage(), e);
-//        }
-//    }
 
     @Override
-    public void saveUser(UserDto userDto) throws EmailAlreadyExistsException {
+    public void authWithHttpServletRequest(HttpServletRequest request, String username, String password) {
+        try {
+            request.login(username, password);
+        } catch (ServletException e) {
+            log.error("Error while login ", e);
+        }
+    }
+
+    @Override
+    @Transactional
+    public void saveUser(HttpServletRequest request, UserDto userDto) throws EmailAlreadyExistsException {
         User user = userDtoBuilderToModel(userDto);
         boolean isExists = userRepository.existsByEmail(userDto.getEmail());
         if (!isExists) {
-            userRepository.save(user);
-            autoLogin(user);
+            userRepository.saveAndFlush(user);
             log.info("Saved user: {}", user.getEmail());
+
+            authWithHttpServletRequest(request, userDto.getEmail(), userDto.getPassword());
+            log.info("Auto authenticated");
         } else {
             throw new EmailAlreadyExistsException();
         }
@@ -196,9 +159,6 @@ public class UserServiceImpl implements UserService {
 
 
     public User userDtoBuilderToModel(UserDto userDto) {
-//        UserImage userImage = new UserImage();
-//        userImage.setUser(findModelUserById(userDto.getId()));
-//        userImage.setFileName(userDto.getAvatar());
         Role role = roleService.findRoleByName(userDto.getAccountType());
 
         return User
@@ -211,7 +171,7 @@ public class UserServiceImpl implements UserService {
                 .avatar(userDto.getAvatar())
                 .accountType(userDto.getAccountType())
                 .password(encoder.encode(userDto.getPassword()))
-                .roles(List.of(role))
+                .roles(Collections.singletonList(role))
                 .enabled(true)
                 .build();
     }
@@ -254,18 +214,6 @@ public class UserServiceImpl implements UserService {
 
     }
 
-    @Override
-    public void autoLogin(User user) {
-        UserDetails userDetails = loadUserByUsername(user.getEmail());
 
-        UsernamePasswordAuthenticationToken authentication =
-                new UsernamePasswordAuthenticationToken(
-                        userDetails,
-                        userDetails.getPassword(),
-                        userDetails.getAuthorities()
-                );
-
-        SecurityContextHolder.getContext().setAuthentication(authentication);
-    }
 
 }
